--- a/synq/synq/Info.plist
+++ b/synq/synq/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIdentifier</key>
+	<string></string>
+	<key>CFBundleExecutable</key>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIApplicationSceneManifest</key>
@@ -29,6 +33,6 @@
 		<string>music</string>
 	</array>
 	<key>NSContactsUsageDescription</key>
-	<string>We use your contacts to help you find your friends on Synq.</string>
+	<string>We use your contacts to find your friends!</string>
 </dict>
 </plist>
